Добавил удаление участника/задачи в Add Contest

--- a/app/templates/manual.html
+++ b/app/templates/manual.html
@@ -2,7 +2,7 @@
 {% block title %}Manual{% endblock %}
 {% block contents %}
 <h3 class="header-name">Руководство<h3>
-    <h5></h5>
+    <h4>Индекс</h4>
     <p>
       На индексе можно посмотреть все контесты и их результаты.
     <p>
@@ -17,7 +17,7 @@
     <p>
       Ссылка на добавление нового контеста внизу страницы.
     </p>
-    <h5>Новый контест</h5>
+    <h4>Новый контест</h4>
     <p>
       Необходимо ввести:
       <ul>
@@ -25,10 +25,12 @@
 	<li>Ссылка</li>
 	<li>Кто решал</li>
 	<li>Задачи (названия свободные)</li>
-	<li>Клик на клетку - задача отмечена.</li>
       </ul>
+    <p>
+      Клик на клетку - задача отмечена. <br>
+      Клик на имя участника/задачи - удаление.
     </p>
-    <h5>Система</h5>
+    <h4>Система</h4>
     <p>
       Контесты можно руками изменять в data.json.
     </p>
