Добавил защиту от изменения паролем

--- a/app/static/index.css
+++ b/app/static/index.css
@@ -8,6 +8,10 @@ div#side-nav {
     position: fixed;
 }
 
+input.side-prompt {
+    width: 100%;
+}
+
 div#content {
     position: absolute;
     right: 0;
