--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,12 +2,15 @@
   <head>
     <title>{% block title %}{% endblock %} | Дорешка #/bin/bash</title>
     <link rel="stylesheet" type="text/css" href="/static/index.css">
+    <link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3pro.css">
+    <!--<link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3mobile.css">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="/static/base.js"></script>
     {% block head %}{% endblock %}
   </head>
   <body>
-    <div id="side-nav">
+    <div id="everything" class="w3-row">
+    <div id="side-nav" class="w3-hide-small w3-col w3-sidebar w3-bar-block s12 m4 l2">
       {% for link in navigation %}
       {% if link.active %}
       <a href="{{link.url}}" class="side-active">{{link.name}}</a>
@@ -21,7 +24,7 @@
 	<input type="button" name="check" value="Submit" onclick="return check_passwd()" class="button-neu">
       </form>
     </div>
-    <div id="content">
+    <div id="content" class="w3-col s12 m8 l10">
       <div id="header">Welcome to Doreshka</div>
       <div id="cont-holder">
 	{% block contents %}{% endblock %}
