--- a/app/static/index.css
+++ b/app/static/index.css
@@ -1,7 +1,14 @@
-div#side-nav {
-    border-right: 3px solid black;
-    height: 100%;
-    padding: 5px;
+@media (orientation: landscape) {
+    div#side-nav {
+	border-right: 3px solid black;
+	padding: 5px;
+    }
+}
+
+@media (orientation: portrait) {
+   div#side-nav {
+       padding: 5px;
+   }
 }
 
 input.side-prompt {
