--- a/app/static/index.css
+++ b/app/static/index.css
@@ -65,11 +65,6 @@ input.button-neu {
     font-family: sans-serif;
 }
 
-input.button-done {  /* Почему то (минимум в файерфоксе) */
-    font-family: sans-serif; /* когда я менял класс кнопки она ломалась */
-    border-style: solid;     /* так что переделываем заного */
-    border-width: 6px 17px 6px 17px;
-    border-color: chartreuse;
-    border-radius: 2px;
+input.button-done {
     background-color: chartreuse;
 }
