--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
       {% endfor %}
       <form name="get_pass">
 	<input type="text" name="pass" placeholder="Password" class="side-prompt">
-	<input type="button" name="check" value="Submit" onclick="return check_passwd()" class="button-neu">
+	<input type="button" name="check" value="Submit" onclick="return check_passwd()" class="button-neu w3-button">
       </form>
     </div>
     <div id="content" class="w3-col s12 m8 l10">
