Маленькие баги и исправления

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
       </form>
     </div>
     <div id="content" class="w3-col s12 m8 l10">
-      <div id="header">Welcome to Doreshka</div>
+      <h2 id="header">Welcome to Doreshka</h2>
       <div id="cont-holder">
 	{% block contents %}{% endblock %}
       </div>
