--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
     <link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3pro.css">
     <!--<link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3mobile.css">-->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='base.js') }}"></script>
     {% block head %}{% endblock %}
